TP-2599 - fix spacing between social buttons and comment anchor

--- a/drupal/sites/all/themes/tp4/css/styles.css
+++ b/drupal/sites/all/themes/tp4/css/styles.css
@@ -5686,7 +5686,7 @@ a.cta span:before {
   }
   /* line 214, ../sass/page/_openpublish_article.scss */
   #article-social #article-share {
-    width: 200px;
+    width: auto;
   }
 }
 @media (max-width: 767px) {
